Minor overflow fix

--- a/entrypoints/popup/App.css
+++ b/entrypoints/popup/App.css
@@ -69,8 +69,9 @@ h1.title {
 }
 
 .group .row {
-  width: 100%;
+  flex: 1;
   gap: 1em;
+  flex-wrap: nowrap;
 }
 
 .group>.row>div:first-child {
@@ -78,7 +79,6 @@ h1.title {
 }
 
 .group h2 {
-  max-width: 100%;
   flex-grow: 1;
   font-size: var(--font-size-md);
   color: var(--primary-color);
